--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body { 
             font-family: 'Playfair Display', serif; 
-            background: url('pine-bg.jpg') no-repeat center/cover fixed, #F5F5DC; 
+            background: url('Treebackground 1.png') no-repeat center/cover fixed, #F5F5DC; 
             color: #228B22; 
             margin: 0; 
             padding: 0; 
@@ -52,11 +52,6 @@
             <h2>Reviews</h2>
             <blockquote>"Engaging voice that pulls you in like a forest path."</blockquote>
             <p>— Happy Author</p>
-        </div>
-        <div class="card">
-            <h2>Demos</h2>
-            <audio controls><source src="demo.mp3" type="audio/mpeg">Browser audio not supported.</audio>
-            <p>Fantasy sample | Add more players</p>
         </div>
         <div class="card">
             <h2>Contact</h2>
