--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 </head>
 <body>
     <div class="hero">
-        <h1>🍃 LeafyPines Narration</h1>
+        <div class="hero">
+    **<img src="logo.png" alt="LeafyPines" style="height:80px; vertical-align:middle; margin-right:15px; border-radius:50%; border:3px solid #FFD700;">**
+        <h1>LeafyPines Narration</h1>
         <p>Where stories grow like ancient pines. ACX-approved, genre-versatile.</p>
     </div>
     <div class="grid">
