--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div class="hero">
         <div class="hero">
-    **<img src="logo.png" alt="LeafyPines" style="height:80px; vertical-align:middle; margin-right:15px; border-radius:50%; border:3px solid #FFD700;">**
+    **<img src="generated-image3.png" alt="LeafyPines" style="height:80px; vertical-align:middle; margin-right:15px; border-radius:50%; border:3px solid #FFD700;">**
         <h1>LeafyPines Narration</h1>
         <p>Where stories grow like ancient pines. ACX-approved, genre-versatile.</p>
     </div>
