--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             line-height: 1.6; 
         }
         header { 
-            background: var(--forest-green); 
+            background: linear-gradient(to bottom, rgba(34,139,34,0.8), transparent), url('Treebackground 1.png') no-repeat center/cover; 
             color: var(--white); 
             text-align: center; 
             padding: 20px; 
@@ -37,7 +37,7 @@
         }
         nav a:hover { color: var(--light-green); }
         .hero { 
-            background: rgba(34,139,34,0.8); 
+            background: linear-gradient(to bottom, rgba(34,139,34,0.8), transparent), url('Treebackground 1.png') no-repeat center/cover; 
             color: var(--white); 
             text-align: center; 
             padding: 100px 20px; 
