--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             --gold: #FFD700; 
             --rust: #A52A2A; 
             --white: #FFFFFF; 
+            --black: #000000;
         }
         body { 
             font-family: 'Georgia', serif; 
@@ -24,10 +25,22 @@
         }
         .hero { 
             background: linear-gradient(to bottom, rgba(34,139,34,0.8), transparent), url('Treebackground 1.png') no-repeat center/cover; 
-            color: var(--white); 
+            color: var(--black); 
             text-align: center; 
             padding: 100px 20px; 
             font-family: 'Playfair Display', serif; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            gap: 20px; 
+            flex-wrap: wrap; 
+        }
+        .hero-logo { 
+            height: 80px; 
+            flex-shrink: 0; 
+        }
+        .hero-content { 
+            text-align: left; 
         }
         .hero h1 { font-size: 3em; margin: 0; font-weight: 700; }
         .grid { 
@@ -44,9 +57,10 @@
             border-radius: 15px; 
             box-shadow: 0 6px 12px rgba(0,0,0,0.15); 
             border-left: 5px solid var(--gold); 
+            color: var(--black);
         }
         .card h2 { 
-            color: var(--forest-green); 
+            color: var(--black); 
             font-family: 'Playfair Display', serif; 
             margin-top: 0; 
         }
@@ -73,14 +87,19 @@
         @media (max-width: 768px) { 
             .hero h1 { font-size: 2em; } 
             .grid { grid-template-columns: 1fr; } 
+            .hero { flex-direction: column; text-align: center; }
+            .hero-content { text-align: center; }
         }
     </style>
 </head>
 <body>
     <div class="hero">
-        <h1>🍃 LeafyPines Narration</h1>
-        <p>Whispers from the Pines – ACX-approved, genre-versatile.</p>
-        <a href="#contact" class="cta">Audition Now</a>
+        <img src="generated-image3.png" alt="LeafyPines Logo" class="hero-logo">
+        <div class="hero-content">
+            <h1>🍃 LeafyPines Audioworks</h1>
+            <p>Whispers from the Pines – ACX-approved, genre-versatile.</p>
+            <a href="#contact" class="cta">Audition Now</a>
+        </div>
     </div>
     <div class="grid">
         <div class="card" id="bio">
@@ -105,7 +124,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2026 LeafyPines Narration. Palmetto, GA. | 
+        &copy; 2026 LeafyPines Audioworks. | 
         <a href="mailto:leafy.pines@proton.me">Email</a> | 
         <a href="https://acx.com">ACX</a>
     </footer>
