--- a/index.html
+++ b/index.html
@@ -94,6 +94,138 @@
 </head>
 <body>
     <div class="hero">
+        <img src="generated-image31.png" alt="LeafyPines Logo" class="hero-logo">
+        <div class="hero-content">
+            <h1>LeafyPines Audioworks</h1>
+            <p>Whispers from the Pines – ACX-approved, genre-versatile.</p>
+            <a href="#contact" class="cta">Audition Now</a>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="card" id="bio">
+            <h2>Bio</h2>
+            <p>From Palmetto pines to narrated worlds, I bring warmth and depth to every audiobook. ACX Narrator seeking projects.</p>
+        </div>
+        <div class="card" id="reviews">
+            <h2>Reviews</h2>
+            <blockquote>"Engaging voice that pulls you in like a forest path."</blockquote>
+            <p>— Happy Author</p>
+        </div>
+        <div class="card" id="demos">
+            <h2>Demos</h2>
+            <audio controls><source src="demo.mp3" type="audio/mpeg">Browser audio not supported.</audio>
+            <p>Fantasy sample | Add more players</p>
+        </div>
+        <div class="card" id="contact">
+            <h2>Contact</h2>
+            <p>leafy.pines@proton.me<br>
+            <a href="https://acx.com/pt/profile?ri=yourid" target="_blank">ACX Profile</a> | <a href="https://linkedin.com/in/leafypines" target="_blank">LinkedIn</a></p>
+            <a href="mailto:leafy.pines@proton.me" class="cta">Get Quote</a>
+        </div>
+    </div>
+    <footer>
+        &copy; 2026 LeafyPines Audioworks. | 
+        <a href="mailto:leafy.pines@proton.me">Email</a> | 
+        <a href="https://acx.com">ACX</a>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LeafyPines Audioworks | ACX Narrator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Georgia&display=swap" rel="stylesheet">
+    <style>
+        :root { 
+            --forest-green: #228B22; 
+            --light-green: #90EE90; 
+            --beige: #F5F5DC; 
+            --gold: #FFD700; 
+            --rust: #A52A2A; 
+            --white: #FFFFFF; 
+            --black: #000000;
+        }
+        body { 
+            font-family: 'Georgia', serif; 
+            background: url('pine-bg.jpg') no-repeat center/cover fixed, var(--beige); 
+            color: var(--forest-green); 
+            margin: 0; 
+            padding: 0; 
+            line-height: 1.6; 
+        }
+        .hero { 
+            background: linear-gradient(to bottom, rgba(34,139,34,0.8), transparent), url('Treebackground 1.png') no-repeat center/cover; 
+            color: var(--black); 
+            text-align: center; 
+            padding: 100px 20px; 
+            font-family: 'Playfair Display', serif; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            gap: 20px; 
+            flex-wrap: wrap; 
+        }
+        .hero-logo { 
+            height: 80px; 
+            flex-shrink: 0; 
+        }
+        .hero-content { 
+            text-align: left; 
+        }
+        .hero h1 { font-size: 3em; margin: 0; font-weight: 700; }
+        .grid { 
+            display: grid; 
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+            gap: 20px; 
+            max-width: 1000px; 
+            margin: auto; 
+            padding: 40px 20px; 
+        }
+        .card { 
+            background: var(--white); 
+            padding: 20px; 
+            border-radius: 15px; 
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15); 
+            border-left: 5px solid var(--gold); 
+            color: var(--black);
+        }
+        .card h2 { 
+            color: var(--black); 
+            font-family: 'Playfair Display', serif; 
+            margin-top: 0; 
+        }
+        .cta { 
+            background: var(--gold); 
+            color: var(--forest-green); 
+            padding: 12px 24px; 
+            border: none; 
+            border-radius: 25px; 
+            font: 700 1.1rem 'Playfair Display', serif; 
+            text-decoration: none; 
+            display: inline-block; 
+            margin-top: 10px; 
+        }
+        audio { width: 100%; margin: 10px 0; }
+        footer { 
+            text-align: center; 
+            padding: 20px; 
+            background: var(--forest-green); 
+            color: var(--white); 
+            font-size: 0.9rem; 
+        }
+        footer a { color: var(--light-green); }
+        @media (max-width: 768px) { 
+            .hero h1 { font-size: 2em; } 
+            .grid { grid-template-columns: 1fr; } 
+            .hero { flex-direction: column; text-align: center; }
+            .hero-content { text-align: center; }
+        }
+    </style>
+</head>
+<body>
+    <div class="hero">
         <img src="generated-image3.png" alt="LeafyPines Logo" class="hero-logo">
         <div class="hero-content">
             <h1>🍃 LeafyPines Audioworks</h1>
