--- a/index.html
+++ b/index.html
@@ -97,26 +97,21 @@
 </head>
 <body>
     <div class="hero">
-        <img src="generated-image3.png" alt="LeafyPines Logo" class="hero-logo">
+        <img src="generated-image31.png" alt="LeafyPines Logo" class="hero-logo">
         <div class="hero-content">
             <h1>LeafyPines Audioworks</h1>
-            <p>Whispers from the Pines – ACX-approved, genre-versatile.</p>
+            <p>Warmth, depth, and range in every narration. – Genre-versatile.</p>
         </div>
     </div>
     <div class="grid">
         <div class="card" id="bio">
             <h2>Bio</h2>
-            <p>From Palmetto pines to narrated worlds, I bring warmth and depth to every audiobook. ACX Narrator seeking projects.</p>
+            <p>Like whispers through the pines - Where stories take root and voice helps bring them to life, I bring warmth, depth, and range to every narration. ACX Narrator seeking projects.</p>
         </div>
         <div class="card" id="reviews">
             <h2>Reviews</h2>
             <blockquote>"Engaging voice that pulls you in like a forest path."</blockquote>
             <p>— Happy Author</p>
-        </div>
-        <div class="card" id="demos">
-            <h2>Demos</h2>
-            <audio controls><source src="demo.mp3" type="audio/mpeg">Browser audio not supported.</audio>
-            <p>Fantasy sample | Add more players</p>
         </div>
         <div class="card" id="contact">
             <h2>Contact</h2>
