--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         :root { 
             --forest-green: #228B22; 
+            --dark-green: #006400; 
             --light-green: #90EE90; 
             --beige: #F5F5DC; 
             --gold: #FFD700; 
@@ -19,13 +20,12 @@
             font-family: 'Libre Baskerville', serif; 
             background: 
                 linear-gradient(to bottom, 
-                    rgba(34,139,34,0.8) 0%, 
-                    rgba(34,139,34,0.4) 30%, 
-                    rgba(245,245,220,0.3) 60%, 
-                    var(--beige) 80%
+                    var(--dark-green) 0%, 
+                    var(--forest-green) 30%, 
+                    rgba(245,245,220,0.6) 70%, 
+                    var(--beige) 100%
                 ),
-                url('Treebackground 1.png') no-repeat center/cover fixed,
-                var(--beige);
+                url('Treebackground 1.png') no-repeat center/cover fixed;
             color: var(--forest-green); 
             margin: 0; 
             padding: 0; 
